--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity
             android:name=".activity.DragAdressViewActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".activity.CallSafeActivity" />
 
         <receiver
             android:name=".receiver.BootCompleteReceiver"
