Installed app list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity
             android:name=".activity.CallSafeActivity"
             android:windowSoftInputMode="stateHidden"/>
+        <activity android:name=".activity.AppManagerActivity"/>
 
         <receiver
             android:name=".receiver.BootCompleteReceiver"
