--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             android:name=".activity.CallSafeActivity"
             android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".activity.AppManagerActivity"/>
+        <activity android:name=".activity.TaskManagerActivity"/>
 
         <receiver
             android:name=".receiver.BootCompleteReceiver"
