--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.silion.mobilesafe"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.silion.mobilesafe"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -47,6 +48,7 @@
         <activity android:name=".activity.AppManagerActivity"/>
         <activity android:name=".activity.TaskManagerActivity"/>
         <activity android:name=".activity.AntivirusActivity"/>
+        <activity android:name=".activity.AppLockActivity"/>
 
         <receiver
             android:name=".receiver.BootCompleteReceiver"
