--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <uses-permission android:name="android.permission.WRITE_SMS"/>
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+    <uses-permission android:name="android.permission.GET_TASKS"/>
 
     <application
         android:allowBackup="true"
@@ -49,6 +50,7 @@
         <activity android:name=".activity.TaskManagerActivity"/>
         <activity android:name=".activity.AntivirusActivity"/>
         <activity android:name=".activity.AppLockActivity"/>
+        <activity android:name=".activity.EnterPwActivity"/>
 
         <receiver
             android:name=".receiver.BootCompleteReceiver"
@@ -121,6 +123,11 @@
         </service>
         <service
             android:name=".service.KillProcessWidgetService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
+        <service
+            android:name=".service.WatchDogService"
             android:enabled="true"
             android:exported="true">
         </service>
