--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
     <uses-permission android:name="android.permission.GET_TASKS"/>
+    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE"/>
+    <uses-permission android:name="android.permission.CLEAR_APP_CACHE"/>
 
     <application
         android:allowBackup="true"
@@ -51,6 +53,7 @@
         <activity android:name=".activity.AntivirusActivity"/>
         <activity android:name=".activity.AppLockActivity"/>
         <activity android:name=".activity.EnterPwActivity"/>
+        <activity android:name=".activity.CleanCacheActivity"/>
 
         <receiver
             android:name=".receiver.BootCompleteReceiver"
