--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/xUtils-2.6.14.jar')
     compile files('libs/gson-2.2.4.jar')
+    compile files('libs/RootTools.jar')
 }
